--- a/bisniscerdass.ipynb
+++ b/bisniscerdass.ipynb
@@ -54,7 +54,7 @@
     "new_sentence = []\n",
     "\n",
     "for word in words:\n",
-    "    if word not in stop_words: #Jika word tidak ada di stop word maka masuk ke dalam new_sentence.append(word), jika word tidak ada di stop_words berhenti,  jadi word (1,2,3) stop_word (is), untuk menghilangkan stop word jadi diberi suatu kondisi untuk memberhentikannya\n",
+    "    if word not in stop_words: \n",
     "            new_sentence.append(word)\n",
     "\n",
     "print(new_sentence)"
@@ -191,17 +191,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "output_type": "stream",
-     "name": "stdout",
-     "text": [
-      "the branch of information science that deals with natural language information\nlarge Old World boas\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from nltk.corpus import wordnet \n",
     "\n",
@@ -214,17 +206,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "output_type": "stream",
-     "name": "stdout",
-     "text": [
-      "['computer', 'computing_machine', 'computing_device', 'data_processor', 'electronic_computer', 'information_processing_system', 'calculator', 'reckoner', 'figurer', 'estimator', 'computer']\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from nltk.corpus import wordnet\n",
     "synonyms = []\n",
@@ -237,17 +221,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "output_type": "stream",
-     "name": "stdout",
-     "text": [
-      "['large', 'big', 'big']\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from nltk.corpus import wordnet\n",
     "antonyms = []\n",
@@ -261,17 +237,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "output_type": "stream",
-     "name": "stdout",
-     "text": [
-      "work\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from nltk.stem import PorterStemmer\n",
     "\n",
@@ -281,17 +249,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "output_type": "stream",
-     "name": "stdout",
-     "text": [
-      "increase\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from nltk.stem import WordNetLemmatizer\n",
     "\n",
@@ -301,17 +261,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "output_type": "stream",
-     "name": "stdout",
-     "text": [
-      "play\nplaying\nplaying\nplaying\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from nltk.stem import WordNetLemmatizer\n",
     "\n",
@@ -324,17 +276,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "output_type": "stream",
-     "name": "stdout",
-     "text": [
-      "stone\nspeak\nbedroom\njoke\nlisa\npurpl\n__________________________\nstone\nspeaking\nbedroom\njoke\nlisa\npurple\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from nltk.stem import WordNetLemmatizer\n",
     "from nltk.stem import PorterStemmer\n",
@@ -356,6 +300,31 @@
     "print(lemmatizer.lemmatize('lisa'))\n",
     "print(lemmatizer.lemmatize('purple'))\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from Sastrawi.Stemmer.StemmerFactory import StemmerFactory\n",
+    "\n",
+    "factory = StemmerFactory()\n",
+    "stemmer = factory.create_stemmer()\n",
+    "\n",
+    "sentence = 'Perekomian Indonesia sedang dalam pertumbuhan yang membanggakan'\n",
+    "output = stemmer.stem(sentence)\n",
+    "\n",
+    "print(output)\n",
+    "print(stemmer.stem('Mereka meniru-nirukannya'))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
